syntax = "proto3";

option csharp_namespace = "Spravy.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package spravy;

service ToDoService {
  rpc GetRootToDoItems (GetRootToDoItemsRequest) returns (GetRootToDoItemsReply);
  rpc GetToDoItem (GetToDoItemRequest) returns (GetToDoItemReply);
  rpc AddRootToDoItem (AddRootToDoItemRequest) returns (AddRootToDoItemReply);
  rpc AddToDoItem (AddToDoItemRequest) returns (AddToDoItemReply);
  rpc DeleteToDoItem (DeleteToDoItemRequest) returns (DeleteToDoItemReply);
  rpc UpdateTypeOfPeriodicity (UpdateTypeOfPeriodicityRequest) returns (UpdateTypeOfPeriodicityReply);
  rpc UpdateDueDate (UpdateDueDateRequest) returns (UpdateDueDateReply);
  rpc UpdateCompleteStatus (UpdateCompleteStatusRequest) returns (UpdateCompleteStatusReply);
  rpc UpdateNameToDoItem (UpdateNameToDoItemRequest) returns (UpdateNameToDoItemReply);
  rpc UpdateOrderIndexToDoItem (UpdateOrderIndexToDoItemRequest) returns (UpdateOrderIndexToDoItemReply);
  rpc UpdateDescriptionToDoItem (UpdateDescriptionToDoItemRequest) returns (UpdateDescriptionToDoItemReply);
}

message UpdateDescriptionToDoItemRequest {
  bytes Id = 1;
  string Description = 2;
}

message UpdateDescriptionToDoItemReply {
}

message UpdateOrderIndexToDoItemRequest {
  bytes Id = 1;
  bytes TargetId = 2;
  bool IsAfter = 3;
}

message UpdateOrderIndexToDoItemReply {
}

message UpdateNameToDoItemRequest {
  bytes Id = 1;
  string Name = 2;
}

message UpdateNameToDoItemReply {
}

message UpdateCompleteStatusRequest {
  bytes Id = 1;
  bool IsComplete = 2;
}

message UpdateCompleteStatusReply {
}

message UpdateDueDateRequest {
  bytes Id = 1;
  DateTimeOffsetGrpc DueDate = 2;
}

message UpdateDueDateReply {
}

message UpdateTypeOfPeriodicityRequest {
  bytes Id = 1;
  TypeOfPeriodicityGrpc Type = 2;
}

message UpdateTypeOfPeriodicityReply {
}

message DeleteToDoItemRequest {
  bytes Id = 1;
}

message DeleteToDoItemReply {
}

message AddToDoItemRequest {
  bytes ParentId = 1;
  string Name = 2;
}

message AddToDoItemReply {
  bytes Id = 1;
}

message AddRootToDoItemRequest {
  string Name = 1;
}

message AddRootToDoItemReply {
  bytes Id = 1;
}

message GetToDoItemRequest {
  bytes Id = 1;
}

message GetToDoItemReply {
  ToDoItemGrpc Item = 1;
}

message GetRootToDoItemsRequest {
}

message GetRootToDoItemsReply {
  repeated ToDoSubItemGrpc Items = 1;
}

message ToDoSubItemGrpc {
  bytes Id = 1;
  string Name = 2;
  DateTimeOffsetGrpc DueDate = 3;
  bool IsComplete = 4;
  uint64 OrderIndex = 5;
  ToDoItemStatusGrpc Status = 6;
  string Description = 7;
}

message ToDoItemParentGrpc {
  bytes Id = 1;
  string Name = 2;
}

message ToDoItemGrpc {
  bytes Id = 1;
  string Name = 2;
  repeated ToDoSubItemGrpc Items = 3;
  repeated ToDoItemParentGrpc Parents = 4;
  TypeOfPeriodicityGrpc TypeOfPeriodicity = 5;
  DateTimeOffsetGrpc DueDate = 6;
  bool IsComplete = 7;
  string Description = 8;
}

message DateTimeOffsetGrpc {
  google.protobuf.Timestamp Date = 1;
  google.protobuf.Duration Offset = 2;
}

enum TypeOfPeriodicityGrpc {
  None = 0;
  Daily = 1;
  Weekly = 2;
  Monthly = 3;
  Annually = 4;
}

enum ToDoItemStatusGrpc {
  Miss = 0;
  Today = 1;
  Waiting = 2;
  ReadyForComplete = 3;
  Complete = 4;
}
